# fast-mcp-quickstart

./: fastmcp_client.py  my_client.py  my_server.py  pyproject.toml
.github/workflows/: pylint.yml
