[project]
name = "fast-mcp-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.12.3",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
]

[dependency-groups]
dev = [
    "pylint>=3.0.0",
]
